# h2histogram-py

./: .gitignore  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: basic_usage.py  read_rezolus_parquet.py
src/h2histogram/: __init__.py  arrow.py  bucket.py  config.py  cumulative.py  histogram.py  sparse.py
tests/: test_arrow.py  test_config.py  test_cumulative.py  test_histogram.py
